# kaonavi-duckdb-writer

./: README.md  kaonavi_api_executor-0.3.0-py3-none-any.whl  main.py  pyproject.toml
docs/: todo_lists.md
src/kaonavi_duckdb_writer/: main.py
